--- a/styles/home.scss
+++ b/styles/home.scss
@@ -76,6 +76,11 @@ body {
   top: 0;
 }
 
+.navbar-user {
+  float: right;
+  margin: 1.5em;
+}
+
 .navbar-brand {
   color: inherit;
   display: block;
